add edit to the README file